# anomaly-detection

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  throwAway.py
.github/workflows/: main.yml
caaswx/spark/: transformers.py
cicd-scripts/: executenotebook.py  installWhlLibrary.py
data/: dataAgentstringflattener.py  dataagentstringflattener.py  datacnextractor.py  datacnextractorGenerator.py
docs/: Makefile  conf.py  execute.sh  update_documentation.sh
docs/_build/html/: .buildinfo  (+3 more)
notebooks/: CN_Extractor_test_data.ipynb  agentFlattener_test_data.ipynb  flattener_test_data.ipynb  ipFeatureGeneratorTestData.ipynb  ipFeaturegenerator_test_data.ipynb  serverfeaturegenerator_test_data.ipynb  sessionFeatureGeneratorTestData.ipynb  sessionFeatureGenerator_test_data.ipynb  sm_resource_cleaner_data.ipynb  userFeaturegenerator_test_data.ipynb
tests/: custom_features.py  json_loading.py  json_storage.py  testAgentStringFlattner.py  test_agentStringFlattener.py  test_agentStringFlattenerChitra.py  test_arrayDistinctFeatures.py  test_arrayRemoveFeature.py  test_baseFeatures.py  test_cnExtractor.py  test_counterFeature.py  test_counterFeatures.py  test_distinctCounterFeatures.py  test_featureGeneration.py  test_individualFeatures.py  test_ipFeatureGenerator.py  test_resourceFlattener.py  test_resourceFlattner.py  test_resources_flattener.py  test_serverfeaturegenerator.py  test_sessionFeatureGenerator.py  test_sizeArrayRemoveFeature.py  test_smResourceCleaner.py  test_testSchema.py  test_transformers.py  test_userFeatureGenerator.py
(+295 files in other folders)
