[metadata]
name = caaswx
version = 0.0.2
author = Kerry Cerqueira
author_email = kerry.cerqueira@cra-arc.gc.ca 
description = Data pipelines and models for CAA streamworx project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kerrycerqueira/caaprojectsm

[options]
package_dir = 
   = caaswx
packages = find:
install_requires =
   pyspark >= 3

[options.packages.find]
where = caaswx
